libxcrypt NEWS -- history of user-visible changes.

Please send bug reports, questions and suggestions to
<https://github.com/besser82/libxcrypt/issues>.

Version 4.4.37

Version 4.4.36
* Fix left over bits failing with Perl v5.38.0 (issue #173).

Version 4.4.35
* Fix build with Perl v5.38.0 (issue #170).
* Fix build with MinGW-w(32|64).

Version 4.4.34
* Update build-aux/m4/ax_valgrind_check.m4 to v23.
* Optimize some cast operation for performance in
  lib/alg-yescrypt-platform.c.
* Add SHA-2 Maj() optimization proposed by Wei Dai in lib/alg-sha512.c.
* Explicitly clean the stack and context state after computation in
  lib/alg-gost3411-2012-hmac.c, lib/alg-hmac-sha1.c, and lib/alg-sha256.c
  (issue #168).

Version 4.4.33
* Fix -Werror=sign-conversion in lib/alg-yescrypt-platform.c.
  With commit 894aee75433b4dc8d9724b126da6e79fa5f6814b we introduced some
  changes to huge page handling, that show this error when building with
  GCC v12.2.1, and thus need a small fix.

Version 4.4.32
* Improvements to huge page handling in lib/alg-yescrypt-platform.c.
  When explicitly using huge pages, request the 2 MiB page size.
  This should fix the issue where on a system configured to use 1 GiB
  huge pages we'd fail on munmap() as we're only rounding the size up
  to a multiple of 2 MiB.  With the fix, we wouldn't use huge pages on
  such a system.  Unfortunately, now we also wouldn't use huge pages on
  Linux kernels too old to have MAP_HUGE_2MB (issue #152).

Version 4.4.31
* Fix -Werror=conversion in lib/alg-yescrypt-opt.c
  (issues #161 and #162).
* Add some SHA-2 Maj() optimization in lib/alg-sha256.c.
* Fix issues found by Covscan in test/getrandom-fallback.c.
* Fix -Werror=strict-overflow in lib/crypt-des.c, which is seen
  by GCC 12.x (issues #155 and #163).

Version 4.4.30
* configure: Restore ucontext api functionality check.
  In c3f01c72b303cbbb0cc8983120677edee2f3fa4b the use of the ucontext api