@@ -17,7 +17,6 @@
  */
 
 #include "crypt-port.h"
-#include <crypt.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
